--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "typeRoots": ["./node_modules/@types", "./node_modules/@capacitor"], 
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
