--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.16",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
@@ -67,6 +68,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
     "@types/react-responsive": "^8.0.8",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
