build: update rollup to version 4.39.0 and add vite resolution
Updated rollup and its platform-specific dependencies to version 4.39.0 to ensure compatibility and leverage the latest features. Additionally, added a resolution for vite to version 5.4.16 to prevent potential version conflicts.

--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.16",
     "vite-plugin-pwa": "^1.0.0"
+  },
+  "resolutions": {
+    "vite": "5.4.16"
   }
 }
